tests/errors/surf_arity_02.ki
# call user Function with a required param missing
var f = Function(a, b, c):
    return a
discard f(1)
